# sol-coprocessor

methods/guest/: Cargo.toml  build.rs  foundry.toml
methods/guest/contracts/: fib.sol
