[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fibonacci"
path = "src/bin/fibonacci.rs"

[dependencies]
ethabi = { version = "18.0", default-features = false }
hex = "0.4.3"
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
radium = "=0.7.1"
revm = { version = "3.5.0", default-features = false, features = ["std"] }
revm-primitives = { version = "1.3.0", default-features = false }
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }
serde_json = "1.0.108"

[patch.crates-io]
radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }

[profile.release]
lto = true
opt-level = 3

[workspace]
